2010-07-15  Eli Zaretskii  <eliz@gnu.org>

	* fringe.c (update_window_fringes): Restore mistakenly reverted
	code from revno 99854.1.6 merged in revno 99950.

2010-07-14  Jan Djärv  <jan.h.d@swipnet.se>

	* xterm.c (xm_scroll_callback, x_process_timeouts): K&R => prototype.
	(SET_SAVED_KEY_EVENT): Remove (not used).
	(SET_SAVED_MENU_EVENT): Rename to SET_SAVED_BUTTON_EVENT and
	remove size parameter.
	(handle_one_xevent): Check popup_activated () for menu for Xt also.
	Remove #ifdef USE_GTK around finish = X_EVENT_DROP.
	Remove #ifdef USE_MOTIF code that did SET_SAVED_BUTTON_EVENT for
	ButtonRelease.
	(x_set_window_size_1): scroll_bar_actual_width is always
	SCROLL_BAR_COLS * COLUMN_WIDTH for the purpose of frame sizing.

	* xdisp.c (pending_menu_activation): Remove extern declaration.
	(prepare_menu_bars): Remove setting of pending_menu_activation.

	* xmenu.c (pending_menu_activation): Remove.
	(x_activate_menubar): Set popup_activated_flag for Xt also. Remove
	setting of pending_menu_activation.
	(set_frame_menubar): Remove check of pending_menu_activation.
	Declare menubar_size before code.  Correct spelling in comment.

2010-07-14  Kenichi Handa  <handa@m17n.org>

	* font.c (font_open_entity): Cancel previous change.
	(Ffont_get): Don't check FONT_ENTITY_INDEX of a font-object.

2010-07-13  Eli Zaretskii  <eliz@gnu.org>

	Remove subprocesses #ifdefs.
	* process.c <inhibit_sentinels>: Move to the common part.
	(Fwaiting_for_user_input_p): Move to the common part; return nil
	if async subprocesses aren't supported.
	* sysdep.c (wait_for_termination) [!MSDOS]: Don't compile on
	MS-DOS.  Remove "#ifdef subprocesses".
	(sys_subshell, sys_select): Remove "#ifdef subprocesses".
	(gettimeofday): Remove "#ifdef subprocesses".
	(wait_without_blocking): Remove function.
	(flush_pending_output, child_setup_tty): Don't compile on MS-DOS.
	Remove "#ifdef subprocesses".
	(child_setup_tty): Use WINDOWSNT instead of DOS_NT, since not
	compiled on MS-DOS.