@@ -1,3 +1,8 @@
+2010-07-15  Andreas Schwab  <schwab@linux-m68k.org>
+
+	* xmenu.c (create_and_show_popup_menu, xmenu_show): Fix type of
+	timestamp argument.
+
 2010-07-15  Eli Zaretskii  <eliz@gnu.org>
 
 	* fringe.c (update_window_fringes): Restore mistakenly reverted
